--- a/views/add_user.ejs
+++ b/views/add_user.ejs
@@ -27,8 +27,7 @@
                                 </div>
                                 <div class="mb-3">
                                     <label for="image" class="form-label">Select Image</label>
-                                    <input type="file" name="image" class="form-control form-control-lg"
-                                    required>
+                                    <input type="file" name="image" class="form-control form-control-lg" required>
                                 </div>
                                 <div class="mb-3 d-grid">
                                     <input type="submit" name="submit" value="Add User" class="btn btn-primary btn-lg">
